# bfa-reference-architecture

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEMAP.md  README.md  USAGE.md  chat.py  cli.py  pyproject.toml  requirements.txt  tui.py
.attic/docs/97-plans/: 02-change-spec-doc31-integration.done.md  05-plan-registry-managed-agent-lifecycle.done.md
_archive/docs/97-plans/: 03-plan-agent-system-rebuild.done.md
config/: .env.example  qa-baseline.json
config/agents/: coordinator.yaml  mission_control.yaml
config/mission_control/rosters/: default.yaml
config/playbooks/: architecture-review.yaml  code.architecture-review.playbook.yaml  platform-self-audit.yaml  system-audit.yaml  system.platform-audit.playbook.yaml
config/playbooks/examples/: ai-news-digest.yaml  research.news-digest.playbook.yaml
config/prompts/categories/: code.md  horizontal.md  system.md
config/prompts/organization/: principles.md  (+1 more)
config/settings/: application.yaml  database.yaml  events.yaml  features.yaml  gate.yaml  missions.yaml  playbooks.yaml  projects.yaml  security.yaml  sessions.yaml  temporal.yaml  test.yaml
docs/01-overview/: 002-platform-flow.md
docs/02-architecture/: 001-project-context-layer.md  002-codebase-intelligence.md
docs/03-implementation/: 00-plan-reference-architecture-fixes.md  01-plan-qa-compliance-agent.md  02-change-spec-doc31-integration.md  03-plan-agent-system-rebuild.md  04-plan-config-schemas-and-cli-split.md  05-plan-registry-managed-agent-lifecycle.md
docs/03-plans/: 01-qa-audit-remediation-plan.md  03-plan-agent-system-rebuild.md  04-plan-config-schemas-and-cli-split.md
docs/03-principles/: 01-project-principles.md
docs/05-plans/: qa-audit-remediation-plan.md
docs/05-rules/: 006_display_centralization.jsonl  007_principles.jsonl
docs/97-plans/: 00-plan-reference-architecture-fixes.done.md  10-plan-event-bus.done.md  10-plan-event-bus.md  11-plan-session-model.md  12-plan-streaming-coordinator.md  12-plan-streaming-mission-control.md  13-plan-horizontal-pm-agent.md  13-plan-mission-control-dispatch.md  14-plan-plan-management.md  14-plan-verification-pipeline.md  15-plan-plan-persistence.md  15-plan-temporal-integration.md  16-plan-playbooks-missions.md  16-plan-temporal-integration.md  17-plan-playbooks-missions.md  18-plan-project-context-layer.md  19-plan-quality-agent-pqi-codemap.md  20-plan-codemap-planning-context.md  21-plan-decouple-playbooks-from-projects.md  22-plan-step-through-gate.md  23-plan-tui-mission-control.md  24-plan-client-module-restructure.md  25-plan-dispatch-streaming-events.md
docs/98-research/: 10-python-concurrency-2026-guide.md  11-bfa-workflow-architecture-specification.md  12-Building a production-grade security testing agent for Python:FastAPI  13-Scaling Open Brain to enterprise- a centralized knowledge architecture.md  14-AI-readable code maps for large Python codebases.md  15-PyQuality Index- a composite 0–100 code quality metric for Python.md
docs/99-reference-architecture/: 00-overview.md  01-core-principles.md  02-core-primitive-identification.md  02-primitive-identification.md  03-backend-architecture.md  03-core-backend-architecture.md  04-core-module-structure.md  04-module-structure.md  05-authentication.md  05-core-authentication.md  06-core-security-standards.md  06-event-architecture.md  06-security-standards.md  07-data-protection.md  08-core-python-coding-standards.md  08-python-coding-standards.md  09-core-error-codes.md  09-error-codes.md  10-core-observability.md  10-observability.md  11-core-testing-standards.md  11-testing-standards.md  12-core-development-workflow.md  12-development-workflow.md  13-core-project-template.md  13-project-template.md  14-background-tasks.md  14-core-background-tasks.md  15-deployment-bare-metal.md  16-core-deployment-azure.md  16-deployment-azure.md  20-data-layer.md  20-opt-data-layer.md  21-event-architecture.md  21-opt-event-architecture.md  22-frontend-architecture.md  22-opt-frontend-architecture.md  23-typescript-coding-standards.md  24-llm-integration.md  24-opt-llm-integration.md  (+29 more)
modules/: __init__.py
modules/backend/: main.py
modules/clients/: __init__.py
scripts/: code_map.py  code_quality.py  compliance_checker.py  generate_code_map.py  list_models.py  score_quality.py  test_agents_live.py  test_gate_live.py
tests/: conftest.py  test_config.py
tests/integration/: conftest.py  test_example_cli.py
tests/unit/: conftest.py  test_example.py
(+314 files in other folders)
